Bug 137063 - Calc shows 6E-05 instead of 0.00006
Summary: Calc shows 6E-05 instead of 0.00006
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-09-26 20:44 UTC by Jonny Grant
Modified: 2021-08-31 10:36 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file made in LO 4.0 (6.97 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-09-28 14:25 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonny Grant 2020-09-26 20:44:04 UTC
0.00006 is not very small, but Calc still shows 6E-05 no matter how wide I resize the window

I know Ubuntu is stuck on the old 6.4 release, as Ubuntu LTS came out earlier in the summer.

Can anyone confirm if this issue still occurs in latest version?

Is there a way to disable all these exponents format display?

I don't really want to go into every spreadsheet we create and manually set the format of each cell to be a number with a certain number of decimal places.
Comment 1 Eike Rathke (retired, only occasionally showing up) 2020-09-26 23:25:51 UTC
Same in 7.0.1

I think this was not the case in early versions, but I don't have earlier than 5.3.7 at hand that also exposes this behaviour => bibisect request.
Comment 2 Jonny Grant 2020-09-26 23:56:18 UTC
Eike
Thank you for looking into this.

May I ask if you could check in your 7.0.1 an issue that appears related PR 130728 please.

Regards, Jonny
Comment 3 Eike Rathke (retired, only occasionally showing up) 2020-09-27 15:10:35 UTC
PR stands for Pull Request, a source code change to be reviewed; you probably meant bug 130728 instead, but that is unrelated.
Comment 4 NISZ LibreOffice Team 2020-09-28 14:25:59 UTC
Created attachment 165922 [details]
Example file made in LO 4.0

Looks like this worked fine in:

Version: 5.1.0.3
Build ID: 5e3e00a007d9b3b6efb6797a8b8e57b51ab1f737
CPU Threads: 4; OS Version: Windows 6.2; UI Render: default; 
Locale: en-US (hu_HU)

but not anymore in:
Version: 5.2.0.4
Build ID: 066b007f5ebcc236395c7d282ba488bca6720265
CPU Threads: 4; OS Version: Windows 6.2; UI Render: GL; 
Locale: hu-HU (hu_HU)
Comment 5 NISZ LibreOffice Team 2020-09-28 14:44:21 UTC
Bibisected with bibisect-win32-5.2 to:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=54862a932fc9ccc1788e91629818ec6666ec1c09

author	Eike Rathke <erack@redhat.com>	2016-01-14 17:42:54 +0100
committer	Eike Rathke <erack@redhat.com>	2016-01-14 17:52:59 +0100

do it right and remove then superfluous mumbo-jumbo
Comment 6 Jonny Grant 2020-09-28 15:06:26 UTC
May I ask, on a newly created Calc spreadsheet. How up to how many decimal places would be expected to be displayed?
Comment 7 Jonny Grant 2020-09-28 22:30:13 UTC
Would be good if this would display

0.0000000001
Comment 8 Eike Rathke (retired, only occasionally showing up) 2020-09-29 09:45:03 UTC
Similar to large numbers, depending on the column width, if a fixed format fits into the cell display that, else use exponential notation.
Comment 9 Jonny Grant 2020-10-25 12:03:35 UTC
Hello

Any news on when this can be fixed?
Happy to pay or donate a bug bounty
Comment 10 Commit Notification 2021-05-23 01:05:36 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/49af7e22e61c2e5d440ad55cd362388983e128ae

Related: tdf#136794 tdf#137063 Unlimit decimals in rtl_math_round()

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2021-05-23 14:24:59 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/172d5649106d8602ee258b7002b78459edd4855c

Resolves: tdf#137063 For General format start exponential display at 1E-10

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2021-05-24 12:59:43 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0a3aa3f3c9b8b160dedd678dcfbca38b2f128c38

tdf#137063: sc_ucalc: Add unittest

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 BogdanB 2021-05-26 05:00:28 UTC
It's ok now.

Showing 0,000000006 in 
Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 42d2b2d55a27f11153ea1713737d93540a19211d
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded