Resolves: tdf#137063 For General format start exponential display at 1E-10

... instead of 1E-05, if not too many significant digits.

Change-Id: I66cca1bdd2742526e4ade08a691e6d43b2eb439e